--- a/mysql.yaml
+++ b/mysql.yaml
@@ -19,7 +19,7 @@
         state: started
         enabled: yes
     - name: Set MySQL root password and authentication method
-      community.mysql.mysql_user:
+      community.mysql.mysql_info:
         login_user: root
         login_password: "{{ mysql_root_password }}"
         login_host: "{{ login_host }}"
