--- a/mysql.yaml
+++ b/mysql.yaml
@@ -25,10 +25,9 @@
         login_host: "{{ login_host }}"
         ignore_errors: true
         register: mysql_info
-
     - name: Print MySQL user setup info
       ansible.builtin.debug:
-        msg: "{{ mysql_info }}"
+        msg: mysql_info
 
     - name: Set MySQL root password
       ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
