--- a/mysql.yaml
+++ b/mysql.yaml
@@ -23,8 +23,8 @@
         login_user: root
         login_password: "{{ mysql_root_password }}"
         login_host: "{{ login_host }}"
-        ignore_errors: true
       register: mysql_info
+      egnore_errors: yes
     - name: Print MySQL user setup info
       ansible.builtin.debug:
         msg: mysql_info
