--- a/mysql.yaml
+++ b/mysql.yaml
@@ -24,7 +24,7 @@
         login_password: "{{ mysql_root_password }}"
         login_host: "{{ login_host }}"
       register: mysql_info
-      egnore_errors: yes
+      ignore_errors: yes
     - name: Print MySQL user setup info
       ansible.builtin.debug:
         msg: mysql_info
