--- a/backend.yaml
+++ b/backend.yaml
@@ -58,7 +58,7 @@
 
   - name: import mysql data
     community.mysql.mysql_db:
-      login_user: root
+      login_user: expense
       login_password: "{{ mysql_root_password }}"
       login_host: "{{ login_host }}"
       target: /app/schema/backend.sql
